--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog-platform",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/build",
+  "homepage": "/",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@material-ui/core": "^4.12.4",
